package NotificationSystem.Decorators;

public interface INotification {
    String getContent();
}
