package NotificationSystem.Decorators;

public interface INotificationDecorator extends INotification {
    @Override
    String getContent();
}
