package NotificationSystem.Observers;

public interface IObserver {
 void update();
}
