package NotificationSystem.Strategies;

public interface INotificationStrategy {
    void sendNotification(String content);
}
